cheat-sheet: fixes copy code to clipboard issue
Button shows "Code copied to Clipboard" but no code can be pasted in Cheat
Sheet.

This patch fixes the reported issue in soletta-dev-app/issues/62.

 - Removed ExamplesView.js and references
 - Corrected indentation and spaces in code
 - Added detection error when copying file

Signed-off-by: Kamidi Preetham <kamidi@live.com>

--- a/doc/node-types-html/css/main.css
+++ b/doc/node-types-html/css/main.css
@@ -177,6 +177,21 @@ body{
     cursor: pointer;
     margin-top: 51px;
 }
+#example-info-code{   /*Added styling for hidden textarea*/
+    position: inherit;
+    resize:none;
+    z-index:-1;
+    background: #2d3237;
+    border: none;
+    outline: none;
+    overflow: hidden;
+    color: #2d3237;
+}
+#example-info-code::selection { /*Stay hidden while selection*/
+    background-color: #2d3237;
+    background: transparent;
+    color: #2d3237;
+}
 #example-code-copied{
     margin-top: 51px;
 }
