cheat-sheet: warn when there is no sample for the selected nodetype
Signed-off-by: Bruno Bottazzini <bruno.bottazzini@intel.com>

--- a/doc/node-types-html/css/main.css
+++ b/doc/node-types-html/css/main.css
@@ -183,6 +183,13 @@ body{
     background-color: rgba(255,255,255,0.05);
     overflow: hidden;
 }
+#example-image-container p{
+    clear: both;
+    color: white;
+    width: auto;
+    height: auto;
+    text-align: center;
+}
 .example-thumb{
     float: left;
     margin-bottom: 8px;
